ORC-322: [C++] Fix writing & reading timestamp

Fixes #233

Signed-off-by: Deepak Majeti <mdeepak@apache.org>